--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>FreeRPG</name>
 
-    <description>Minecraft 1.15-1.16 RPG Plugin</description>
+    <description>Minecraft 1.17 RPG Plugin</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.16.1-R0.1-SNAPSHOT</version>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
